# YouthCognitionPlatform

./: .gitignore  CLAUDE.md  README.md  deploy.sh  experiment.js  index.html  package-lock.json  package.json  parse-csv.js  server.js  stop.sh  style.css  todo.md  vite.config.js  追忆李白.md
backend/: README.md  config.py  database.py  init_db.py  logger.py  logger_config.py  main.py  parse_docx.py  pyproject.toml  run.py  shell.py  test_audio_processing.py
backend/apps/admin/: router.py
backend/apps/attention_test/: models.py  router.py  service.py
backend/apps/calculation_test/: models.py  router.py  service.py
backend/apps/literacy_test/: models.py  router.py  service.py
backend/apps/oral_reading_fluency/: mock_evaluation.py  models.py  router.py  service.py  xfyun_sdk.py
backend/apps/raven_test/: __init__.py  models.py  router.py  scoring.py  service.py
backend/apps/reading_fluency/: README.md  analysis.py  models.py  router.py  service.py
backend/apps/users/: models.py  router.py  schemas.py
backend/data/: 3min阅读图画版.docx  CRT_CC_20.m  CRT_CC_20_norm.csv  CRT_answer.json  CRT_answer.txt  attention_matrix.txt  attention_targets.json  literacy_test_data.json  reading_questions.csv  初中及以上阅读.csv  教学阶段.csv  正式阶段-new.txt  正式阶段.csv  注意力筛查字符集.txt  阅读流畅性测试标准答案.csv
backend/data/raven_test/: download_report.txt
backend/migrations/: add_problem_type_column.py
backend/script/: font_export.py  generate_fixed_squence.py
backend/test/: attention_test.hurl  conftest.py  raven_test.hurl  test.http  test_api.py  test_attention_api.py
backend/uploads/oral_reading_fluency/evaluation_results/: evaluation_result_1_20250726_115119_abe3bdf2.json  (+1 more)
(+60 files in other folders)
